# Hazel

./: .gitignore  .gitmodules  CMakeLists.txt  Hazel.sln  premake5.lua
Hazel/: CMakeLists.txt  Hazel.vcxproj  Hazel.vcxproj.filters  premake5.lua
Hazel/include/: Hazel.h  hzpch.h
Hazel/include/Hazel/Core/: Base.h  Log.h  ResourceManager.h  Window.h
Hazel/include/Hazel/Events/: Event.h  KeyEvent.h  MouseEvent.h
Hazel/include/Hazel/Imgui/: ImGuiLayer.h
Hazel/include/Hazel/Renderer/: Buffer.h  EditorCamera.h  FrameBuffer.h  Material.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererAPI.h  Shader.h  Texture.h
Hazel/include/Hazel/Scene/: Components.h  Entity.h  Scene.h  SceneCamera.h  ScriptableEntity.h
Hazel/include/Hazel/Utils/: PlatformUtils.h
Hazel/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Base.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ResourceManager.cpp  Timestep.h  UUID.cpp  Window.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Hazel/src/Hazel/Imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Math/: Math.cpp
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Scene/: Camera.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Hazelnut/: CMakeLists.txt  imgui.ini  premake5.lua
Hazelnut/assets/scenes/: Example.hazel  PinkCube.hazel
Hazelnut/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Texture.glsl
Hazelnut/include/: EditorLayer.h  EditorLayer3D.h
Hazelnut/src/: EditorLayer.cpp  EditorLayer.h  EditorLayer3D.cpp  HazelnutApp.cpp  HazelnutLayer.cpp  HazelnutLayer.h
Hazelnut/src/Panels/: ContentBrowserPanel.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/src/: ParticleSystem.h  (+3 more)
(+14 files in other folders)
